--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>pl.pwr</groupId>
-    <artifactId>tick-tack-toe</artifactId>
+    <artifactId>tic-tac-toe</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
